--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,6 +1,5 @@
-.container {
-    grid-area: c;
-    background-color:  rgba(138, 49, 202, 0.818);
-    height: 300px;
-    border-radius: 5px;
-}
+/* .content {
+    background-color: rgba(138, 49, 202, 0.818);
+    height: 500px;
+    border-radius: 10px;
+} */
