--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,6 +5,7 @@
     border-radius: 5px;
 }
 .header img {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
 }
